kubernetes/apps/matrix/synapse/synapse/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-synapse
  namespace: matrix
  annotations: 
    dns.alpha.kubernetes.io/external: "matrix-synapse.matrix.svc.cluster.local"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
    - name: https
      protocol: TCP
      port: 8448
      targetPort: 8448
  selector:
    app: matrix-synapse
  type: ClusterIP
